# NEXUS-AI-2.0

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md
backend/config/: base.yaml
backend/scripts/: README.md
backend/tests/: conftest.py  helpers.py  test_cost_controls.py  test_evaluation_runner.py  test_generation_pipeline.py  test_health.py  test_postprocessing_pipeline.py  test_query_api.py  test_query_pipeline.py  test_scaling_controls.py  test_security_controls.py
config/: base.yaml
data/evaluation/: README.md  sample_eval_dataset.jsonl
deploy/kubernetes/: deployment.yaml
docs/phases/: phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-16b.md
frontend/: README.md  index.html
scripts/: generate_eval_dataset.py  run_api.py  run_context_pipeline.py  run_evaluation.py  run_generation_pipeline.py  run_indexing.py  run_ingestion.py  run_postprocessing_pipeline.py  run_query_pipeline.py  run_reranking_pipeline.py  run_retrieval_pipeline.py
src/rag_service/: main.py
tests/: conftest.py  test_context_pipeline.py  test_evaluation_metrics.py  test_failure_handling.py  test_generation_pipeline.py  test_indexing_pipeline.py  test_ingestion_pipeline.py  test_latency_optimization.py  test_postprocessing_pipeline.py  test_query_api.py  test_query_service.py  test_reranking_pipeline.py  test_retrieval_pipeline.py
(+99 files in other folders)
