[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "nexus-rag-platform"
version = "0.6.0"
description = "Production-grade modular Retrieval-Augmented Generation platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abdullah" }]
dependencies = [
  "beautifulsoup4>=4.12.3,<5.0.0",
  "faiss-cpu>=1.8.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "numpy>=2.0.0,<3.0.0",
  "openai>=1.40.0,<2.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "PyPDF>=5.0.0,<6.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
  "structlog>=24.4.0,<25.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "Whoosh>=2.7.4,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "reportlab>=4.2.2,<5.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_service"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]